# HomelabMicroservices

./: .gitignore  CMakeLists.txt  README.md  configurecmake.sh  dev.sh  main.py  requirements.txt  runcmake.sh
cpp/: bindings.cpp  build.sh  sha256sum.cpp  test.cpp
